--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Random Password Generator</h1> 
     <div class="generator"> 
         <div class="password"> 
-            <input type="text" placeholder="Password" /> 
+            <input type="text" placeholder="Your secure password" /> 
             <button onclick="copy()">COPY</button> 
         </div>
         <div class="range"> 
